--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -23,7 +23,7 @@ jobs:
       - name: Get version from version.txt
         id: version
         run: |
-          VERSION=$(cat version.txt | tr -d '\n\r')
+          VERSION=$(cat version.txt | tr -d '\n\r\t ')
           echo "version=$VERSION" >> $GITHUB_OUTPUT
           echo "Version: $VERSION"
 
@@ -32,10 +32,10 @@ jobs:
         run: |
           if git tag --list | grep -q "^v${{ steps.version.outputs.version }}$"; then
             echo "exists=true" >> $GITHUB_OUTPUT
-            echo "Tag v${{ steps.version.outputs.version }} already exists"
+            echo "::warning::Tag v${{ steps.version.outputs.version }} already exists - skipping release creation"
           else
             echo "exists=false" >> $GITHUB_OUTPUT
-            echo "Tag v${{ steps.version.outputs.version }} does not exist"
+            echo "::notice::Tag v${{ steps.version.outputs.version }} does not exist - proceeding with release"
           fi
 
       - name: Update manifest.json version
